--- a/environment.yml
+++ b/environment.yml
@@ -10,7 +10,8 @@ dependencies:
   - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
   - blas=1.0=mkl
   - bzip2=1.0.8=h1de35cc_0
-  - ca-certificates=2021.10.8=h033912b_0
+  - ca-certificates=2021.10.26=hecd8cb5_2
+  - certifi=2021.10.8=py38h50d1736_1
   - debugpy=1.4.1=py38ha048514_0
   - decorator=5.1.0=pyhd8ed1ab_0
   - entrypoints=0.3=pyhd8ed1ab_1003
@@ -54,6 +55,7 @@ dependencies:
   - ncurses=6.2=h0a44026_1
   - nest-asyncio=1.5.1=pyhd8ed1ab_0
   - nettle=3.7.3=h230ac6f_1
+  - numpy=1.21.2=py38h4b4dc7a_0
   - numpy-base=1.21.2=py38he0bd621_0
   - olefile=0.46=pyhd3eb1b0_0
   - openh264=2.1.0=hd9629dc_0
@@ -62,6 +64,7 @@ dependencies:
   - pexpect=4.8.0=pyh9f0ad1d_2
   - pickleshare=0.7.5=py_1003
   - pip=21.0.1=py38hecd8cb5_0
+  - prompt-toolkit=3.0.22=pyha770c72_0
   - ptyprocess=0.7.0=pyhd3deb0d_0
   - pygments=2.10.0=pyhd8ed1ab_0
   - python=3.8.11=h88f2d9e_1
@@ -71,9 +74,11 @@ dependencies:
   - pyzmq=22.3.0=py38hd3b92b6_0
   - readline=8.1=h9ed2024_0
   - setuptools=58.0.4=py38hecd8cb5_0
+  - six=1.16.0=pyh6c4a22f_0
   - sqlite=3.36.0=hce871da_0
   - tk=8.6.11=h7bc2e8c_0
   - torchaudio=0.10.0=py38_cpu
+  - torchvision=0.11.1=py38_cpu
   - tornado=6.1=py38h96a0964_1
   - traitlets=5.1.0=pyhd8ed1ab_0
   - typing_extensions=3.10.0.2=pyh06a4308_0
@@ -84,189 +89,68 @@ dependencies:
   - zlib=1.2.11=h1de35cc_3
   - zstd=1.4.9=h322a384_0
   - pip:
-    - absl-py==0.14.1
-    - aiohttp==3.7.4
-    - amqp==5.0.6
+    - absl-py==1.0.0
     - antlr4-python3-runtime==4.8
-    - asgiref==3.4.1
-    - astor==0.8.1
-    - astunparse==1.6.3
-    - async-timeout==3.0.1
-    - attrs==21.2.0
-    - azure-core==1.19.0
-    - azure-eventhub==5.1.0
-    - azure-storage-blob==12.6.0
-    - beautifulsoup4==4.10.0
-    - billiard==3.6.4.0
-    - blessings==1.7
-    - blinker==1.4
-    - boltons==21.0.0
-    - boto==2.49.0
-    - boto3==1.18.53
-    - botocore==1.21.53
-    - brotli==1.0.9
+    - appdirs==1.4.4
+    - black==21.4b2
     - cachetools==4.2.4
-    - celery==5.1.2
-    - certifi==2021.10.8
-    - cffi==1.14.6
-    - chardet==3.0.4
-    - charset-normalizer==2.0.6
-    - click==7.1.2
-    - click-didyoumean==0.3.0
-    - click-plugins==1.1.1
-    - click-repl==0.2.0
+    - charset-normalizer==2.0.8
+    - click==8.0.3
     - cloudpickle==2.0.0
-    - cryptography==35.0.0
-    - curtsies==0.3.7
-    - cwcwidth==0.1.4
-    - cycler==0.10.0
+    - cycler==0.11.0
     - cython==0.29.24
-    - dask==2.6.0
-    - deprecated==1.2.13
-    - detectron2==0.4
-    - django==3.2.7
-    - django-cors-headers==3.9.0
-    - django-http-exceptions==1.4.0
-    - django-request-logging==0.7.3
-    - djangorestframework==3.12.4
-    - fastapi==0.68.0
-    - fire==0.4.0
-    - flask==2.0.1
-    - flask-compress==1.9.0
-    - flask-cors==3.0.10
-    - flatbuffers==1.12
-    - flower==1.0.0
-    - fsspec==2021.10.0
+    - detectron2==0.6
+    - easydict==1.9
+    - fonttools==4.28.2
     - future==0.18.2
-    - fvcore==0.1.3.post20210317
-    - gast==0.4.0
-    - gitdb==4.0.7
-    - gitpython==3.1.24
-    - google-auth==1.35.0
+    - fvcore==0.1.5.post20211023
+    - google-auth==2.3.3
     - google-auth-oauthlib==0.4.6
-    - google-pasta==0.2.0
-    - gputil==1.4.0
-    - greenlet==1.1.2
-    - grpcio==1.34.1
-    - gym==0.20.0
-    - gym-unity==0.27.0
-    - h11==0.12.0
-    - h5py==3.1.0
-    - humanize==3.11.0
-    - idna==3.2
-    - imageio==2.9.0
-    - img2pdf==0.4.1
-    - importlib-metadata==4.8.1
+    - grpcio==1.42.0
+    - hydra-core==1.1.1
+    - idna==3.3
+    - imageio==2.13.0
+    - importlib-metadata==4.8.2
+    - importlib-resources==5.4.0
     - iopath==0.1.9
-    - isodate==0.6.0
-    - itsdangerous==2.0.1
-    - jinja2==3.0.1
-    - jmespath==0.10.0
-    - joblib==1.0.1
-    - jsonschema==3.2.0
-    - keras-nightly==2.5.0.dev2021032900
-    - keras-preprocessing==1.1.2
-    - keras-unet-collection==0.1.10
-    - keras2onnx==1.7.0
     - kiwisolver==1.3.2
-    - kombu==5.1.0
-    - layoutparser==0.3.2
-    - locket==0.2.1
-    - lxml==4.6.3
-    - markdown==3.3.4
-    - markupsafe==2.0.1
-    - matplotlib==3.4.2
-    - mixpanel==4.7.0
-    - mlagents-envs==0.27.0
-    - msrest==0.6.21
-    - multidict==5.1.0
+    - markdown==3.3.6
+    - matplotlib==3.5.0
+    - mypy-extensions==0.4.3
     - networkx==2.6.3
-    - numpy==1.19.2
     - oauthlib==3.1.1
     - omegaconf==2.1.1
-    - onnx==1.9.0
-    - onnxconverter-common==1.8.1
-    - opencv-python==4.5.3.56
-    - opt-einsum==3.3.0
-    - packaging==21.0
-    - pandas==1.3.3
-    - partd==1.2.0
-    - pdf2image==1.16.0
-    - pdf2pptx==1.0.3
-    - pdfminer-six==20200517
-    - pdfplumber==0.5.28
-    - perceptilabs==0.12.25
-    - pikepdf==3.1.1
-    - pillow==8.3.2
+    - packaging==21.3
+    - pandas==1.3.4
+    - pathspec==0.9.0
+    - pillow==8.4.0
     - portalocker==2.3.2
-    - prometheus-client==0.11.0
-    - prompt-toolkit==3.0.20
-    - protobuf==3.18.0
-    - psutil==5.8.0
-    - psycopg2-binary==2.9.1
+    - protobuf==3.19.1
     - pyasn1==0.4.8
     - pyasn1-modules==0.2.8
-    - pycocotools==2.0.2
-    - pycparser==2.20
-    - pycryptodome==3.11.0
-    - pydantic==1.8.2
+    - pycocotools==2.0.3
     - pydot==1.4.2
-    - pygithub==1.55
-    - pyjwt==2.1.0
-    - pymupdf==1.18.19
-    - pynacl==1.4.0
-    - pyparsing==2.4.7
-    - pyrsistent==0.18.0
-    - python-pptx==0.6.21
+    - pyparsing==3.0.6
     - pytz==2021.3
-    - pywavelets==1.1.1
-    - pyyaml==5.4.1
-    - redis==3.5.3
+    - pywavelets==1.2.0
+    - pyyaml==6.0
+    - regex==2021.11.10
     - requests==2.26.0
     - requests-oauthlib==1.3.0
-    - retrying==1.3.3
-    - rsa==4.7.2
-    - s3transfer==0.5.0
-    - scikit-image==0.17.2
-    - scikit-learn==1.0
-    - scipy==1.7.1
-    - send2trash==1.8.0
-    - sentry-sdk==1.4.3
-    - six==1.15.0
-    - slideshare==0.1.dev0
-    - smmap==4.0.0
-    - sortedcontainers==2.4.0
-    - soupsieve==2.2.1
-    - sqlparse==0.4.2
-    - starlette==0.14.2
+    - rsa==4.8
+    - scikit-image==0.18.3
+    - scipy==1.7.3
+    - setuptools-scm==6.3.2
     - tabulate==0.8.9
-    - tensorboard==2.6.0
+    - tensorboard==2.7.0
     - tensorboard-data-server==0.6.1
     - tensorboard-plugin-wit==1.8.0
-    - tensorflow==2.5.0
-    - tensorflow-addons==0.13.0
-    - tensorflow-estimator==2.5.0
     - termcolor==1.1.0
-    - tf2onnx==1.7.2
-    - threadpoolctl==3.0.0
-    - tifffile==2021.8.30
-    - toolz==0.11.1
-    - torchvision==0.11.1
+    - tifffile==2021.11.2
+    - toml==0.10.2
+    - tomli==1.2.2
     - tqdm==4.62.3
-    - typeguard==2.12.1
-    - typing-extensions==3.7.4.3
-    - uamqp==1.4.2
-    - urllib3==1.25.10
-    - uvicorn==0.15.0
-    - vine==5.0.0
-    - waitress==2.0.0
-    - wand==0.6.7
-    - websocket-client==1.2.1
-    - websockets==10.0
-    - werkzeug==2.0.1
-    - wrapt==1.12.1
-    - xlsxwriter==3.0.1
-    - xmltodict==0.12.0
+    - urllib3==1.26.7
+    - werkzeug==2.0.2
     - yacs==0.1.8
-    - yarl==1.6.3
     - zipp==3.6.0
