--- a/environment.yml
+++ b/environment.yml
@@ -120,6 +120,7 @@ dependencies:
     - networkx==2.6.3
     - oauthlib==3.1.1
     - omegaconf==2.1.1
+    - opencv-python==4.5.4.60
     - packaging==21.3
     - pandas==1.3.4
     - pathspec==0.9.0
@@ -154,3 +155,4 @@ dependencies:
     - werkzeug==2.0.2
     - yacs==0.1.8
     - zipp==3.6.0
+prefix: /usr/local/anaconda3/envs/cs492i
