--- a/environment.yml
+++ b/environment.yml
@@ -4,90 +4,90 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - appnope=0.1.2=py38h50d1736_1
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=py_2
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - blas=1.0=mkl
-  - bzip2=1.0.8=h1de35cc_0
-  - ca-certificates=2021.10.26=hecd8cb5_2
-  - certifi=2021.10.8=py38h50d1736_1
-  - debugpy=1.4.1=py38ha048514_0
-  - decorator=5.1.0=pyhd8ed1ab_0
-  - entrypoints=0.3=pyhd8ed1ab_1003
-  - ffmpeg=4.3=h0a44026_0
-  - freetype=2.10.4=ha233b18_0
-  - gettext=0.21.0=h7535e17_0
-  - giflib=5.2.1=haf1e3a3_0
-  - gmp=6.2.1=h23ab428_2
-  - gnutls=3.6.15=hed9c0bf_0
-  - icu=58.2=h0a44026_3
-  - intel-openmp=2021.3.0=hecd8cb5_3375
-  - ipykernel=6.4.2=py38h5fd9f69_0
-  - ipython=7.28.0=py38h5fd9f69_0
-  - ipython_genutils=0.2.0=py_1
-  - jedi=0.18.0=py38h50d1736_2
-  - jpeg=9d=h9ed2024_0
-  - jupyter_client=7.0.6=pyhd8ed1ab_0
-  - jupyter_core=4.8.1=py38h50d1736_0
-  - lame=3.100=h1de35cc_0
-  - lcms2=2.12=hf1fd2bf_0
-  - libcxx=12.0.0=h2f01273_0
-  - libffi=3.3=hb1e8313_2
-  - libiconv=1.16=h1de35cc_0
-  - libidn2=2.3.2=h9ed2024_0
-  - libpng=1.6.37=ha441bb4_0
-  - libsodium=1.0.18=hbcb3906_1
-  - libtasn1=4.16.0=h9ed2024_0
-  - libtiff=4.2.0=h87d7836_0
-  - libunistring=0.9.10=h9ed2024_0
-  - libuv=1.40.0=haf1e3a3_0
-  - libwebp=1.2.0=hacca55c_0
-  - libwebp-base=1.2.0=h9ed2024_0
-  - libxml2=2.9.12=hcdb78fc_0
-  - llvm-openmp=12.0.0=h0dcd299_1
-  - lz4-c=1.9.3=h23ab428_1
-  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
-  - mkl=2021.3.0=hecd8cb5_517
-  - mkl-service=2.4.0=py38h9ed2024_0
-  - mkl_fft=1.3.1=py38h4ab4a9b_0
-  - mkl_random=1.2.2=py38hb2f4e1b_0
-  - ncurses=6.2=h0a44026_1
-  - nest-asyncio=1.5.1=pyhd8ed1ab_0
-  - nettle=3.7.3=h230ac6f_1
-  - numpy=1.21.2=py38h4b4dc7a_0
-  - numpy-base=1.21.2=py38he0bd621_0
-  - olefile=0.46=pyhd3eb1b0_0
-  - openh264=2.1.0=hd9629dc_0
-  - openssl=1.1.1l=h0d85af4_0
-  - parso=0.8.2=pyhd8ed1ab_0
-  - pexpect=4.8.0=pyh9f0ad1d_2
-  - pickleshare=0.7.5=py_1003
-  - pip=21.0.1=py38hecd8cb5_0
-  - prompt-toolkit=3.0.22=pyha770c72_0
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pygments=2.10.0=pyhd8ed1ab_0
-  - python=3.8.11=h88f2d9e_1
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python_abi=3.8=2_cp38
-  - pytorch=1.10.0=py3.8_0
-  - pyzmq=22.3.0=py38hd3b92b6_0
-  - readline=8.1=h9ed2024_0
-  - setuptools=58.0.4=py38hecd8cb5_0
-  - six=1.16.0=pyh6c4a22f_0
-  - sqlite=3.36.0=hce871da_0
-  - tk=8.6.11=h7bc2e8c_0
-  - torchaudio=0.10.0=py38_cpu
-  - torchvision=0.11.1=py38_cpu
-  - tornado=6.1=py38h96a0964_1
-  - traitlets=5.1.0=pyhd8ed1ab_0
-  - typing_extensions=3.10.0.2=pyh06a4308_0
-  - wcwidth=0.2.5=pyh9f0ad1d_2
-  - wheel=0.37.0=pyhd3eb1b0_1
-  - xz=5.2.5=h1de35cc_0
-  - zeromq=4.3.4=he49afe7_1
-  - zlib=1.2.11=h1de35cc_3
-  - zstd=1.4.9=h322a384_0
+  - appnope=0.1.2
+  - backcall=0.2.0
+  - backports=1.0
+  - backports.functools_lru_cache=1.6.4
+  - blas=1.0
+  - bzip2=1.0.8
+  - ca-certificates=2021.10.26
+  - certifi=2021.10.8
+  - debugpy=1.4.1
+  - decorator=5.1.0
+  - entrypoints=0.3
+  - ffmpeg=4.3
+  - freetype=2.10.4
+  - gettext=0.21.0
+  - giflib=5.2.1
+  - gmp=6.2.1
+  - gnutls=3.6.15
+  - icu=58.2
+  - intel-openmp=2021.3.0
+  - ipykernel=6.4.2
+  - ipython=7.28.0
+  - ipython_genutils=0.2.0
+  - jedi=0.18.0
+  - jpeg=9d
+  - jupyter_client=7.0.6
+  - jupyter_core=4.8.1
+  - lame=3.100
+  - lcms2=2.12
+  - libcxx=12.0.0
+  - libffi=3.3
+  - libiconv=1.16
+  - libidn2=2.3.2
+  - libpng=1.6.37
+  - libsodium=1.0.18
+  - libtasn1=4.16.0
+  - libtiff=4.2.0
+  - libunistring=0.9.10
+  - libuv=1.40.0
+  - libwebp=1.2.0
+  - libwebp-base=1.2.0
+  - libxml2=2.9.12
+  - llvm-openmp=12.0.0
+  - lz4-c=1.9.3
+  - matplotlib-inline=0.1.3
+  - mkl=2021.3.0
+  - mkl-service=2.4.0
+  - mkl_fft=1.3.1
+  - mkl_random=1.2.2
+  - ncurses=6.2
+  - nest-asyncio=1.5.1
+  - nettle=3.7.3
+  - numpy=1.21.2
+  - numpy-base=1.21.2
+  - olefile=0.46
+  - openh264=2.1.0
+  - openssl=1.1.1l
+  - parso=0.8.2
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pip=21.0.1
+  - prompt-toolkit=3.0.22
+  - ptyprocess=0.7.0
+  - pygments=2.10.0
+  - python=3.8.11
+  - python-dateutil=2.8.2
+  - python_abi=3.8
+  - pytorch=1.10.0
+  - pyzmq=22.3.0
+  - readline=8.1
+  - setuptools=58.0.4
+  - six=1.16.0
+  - sqlite=3.36.0
+  - tk=8.6.11
+  - torchaudio=0.10.0
+  - torchvision=0.11.1
+  - tornado=6.1
+  - traitlets=5.1.0
+  - typing_extensions=3.10.0.2
+  - wcwidth=0.2.5
+  - wheel=0.37.0
+  - xz=5.2.5
+  - zeromq=4.3.4
+  - zlib=1.2.11
+  - zstd=1.4.9
   - pip:
     - absl-py==1.0.0
     - antlr4-python3-runtime==4.8
