--- a/.gitignore
+++ b/.gitignore
@@ -95,6 +95,7 @@ ipython_config.py
 #   install all needed dependencies.
 #Pipfile.lock
 
+.DS_Store
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
 __pypackages__/
 
